--- a/app/src/main/res/layout/activity_who_are_you_page.xml
+++ b/app/src/main/res/layout/activity_who_are_you_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_background"
+    android:background="@drawable/new_gradient"
     tools:context=".WhoAreYouPage">
 
     <ImageView
@@ -125,5 +125,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.694" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
