--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="centerColor">#ee531f</color>
     <color name="orange">#ff5f5f</color>
     <color name="endColor">#9B0455</color>
+    <color name="color1">#070C33</color>
+    <color name="color2">#1677C5</color>
+    <color name="color3">#64EEFA</color>
 </resources>
