--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -1,243 +1,211 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout2"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:id="@+id/linearLayout2"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:background="@drawable/new_gradient"
+tools:context=".Account">
+
+<androidx.appcompat.widget.Toolbar
+    android:id="@+id/toolbar5"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/gradient_background"
-    tools:context=".Account">
+    android:layout_height="wrap_content"
+    android:background="@drawable/toolbar"
+    android:minHeight="?attr/actionBarSize"
+    android:padding="8dp"
+    android:theme="?attr/actionBarTheme"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar5"
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="start"
+        android:contentDescription="@string/stop2go"
+        android:src="@drawable/logo3"
+        app:layout_constraintBottom_toBottomOf="@+id/menu_back"
+        app:layout_constraintEnd_toEndOf="@id/textView2"
+        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintTop_toTopOf="@+id/menu_back" />
+
+    <ImageButton
+        android:id="@+id/account_button"
+        android:layout_width="55dp"
         android:layout_height="wrap_content"
-        android:background="#e7820e"
-        android:minHeight="?attr/actionBarSize"
-        android:padding="8dp"
-        android:theme="?attr/actionBarTheme"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_gravity="end"
+        android:backgroundTint="@color/Transparency"
+        android:contentDescription="@string/accounts"
+        android:src="@drawable/account_button"
+        app:layout_constraintBottom_toBottomOf="@+id/menu_back"
+        app:layout_constraintEnd_toEndOf="@+id/menu_back"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/my_orders_button"
+        app:layout_constraintTop_toTopOf="@+id/menu_back" />
 
-        <ImageView
-            android:id="@+id/logo"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="start"
-            android:contentDescription="@string/stop2go"
-            android:src="@drawable/logo3"
-            app:layout_constraintBottom_toBottomOf="@+id/menu_back"
-            app:layout_constraintEnd_toEndOf="@id/textView2"
-            app:layout_constraintStart_toStartOf="@+id/textView2"
-            app:layout_constraintTop_toTopOf="@+id/menu_back" />
-
-        <ImageButton
-            android:id="@+id/account_button"
-            android:layout_width="55dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:backgroundTint="@color/Transparency"
-            android:contentDescription="@string/accounts"
-            android:src="@drawable/account_button"
-            app:layout_constraintBottom_toBottomOf="@+id/menu_back"
-            app:layout_constraintEnd_toEndOf="@+id/menu_back"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/my_orders_button"
-            app:layout_constraintTop_toTopOf="@+id/menu_back" />
-
-<!--        <ImageButton-->
-<!--            android:id="@+id/cart_button"-->
-<!--            android:layout_width="55dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_gravity="end"-->
-<!--            android:backgroundTint="@color/Transparency"-->
-<!--            android:contentDescription="@string/cart"-->
-<!--            android:src="@drawable/cart_button"-->
-<!--            app:layout_constraintBottom_toBottomOf="@+id/menu_back"-->
-<!--            app:layout_constraintEnd_toStartOf="@+id/my_orders_button"-->
-<!--            app:layout_constraintStart_toEndOf="@+id/home_button"-->
-<!--            app:layout_constraintTop_toTopOf="@+id/menu_back" />-->
-
-        <ImageButton
-            android:id="@+id/orders_button"
-            android:layout_width="55dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:backgroundTint="@color/Transparency"
-            android:contentDescription="@string/orders"
-            android:src="@drawable/orders_button"
-            app:layout_constraintBottom_toBottomOf="@+id/menu_back"
-            app:layout_constraintEnd_toStartOf="@+id/my_orders_button"
-            app:layout_constraintStart_toEndOf="@+id/home_button"
-            app:layout_constraintTop_toTopOf="@+id/menu_back" />
-
-        <ImageButton
-            android:id="@+id/home_button"
-            android:layout_width="55dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:backgroundTint="@color/Transparency"
-            android:contentDescription="@string/home"
-            android:src="@drawable/home_button"
-            app:layout_constraintBottom_toBottomOf="@+id/menu_back"
-            app:layout_constraintEnd_toStartOf="@+id/orders_button"
-            app:layout_constraintStart_toEndOf="@+id/textView2"
-            app:layout_constraintTop_toTopOf="@+id/menu_back" />
-
-    </androidx.appcompat.widget.Toolbar>
-
-
-    <TextView
-        android:id="@+id/account_text"
-        android:layout_width="wrap_content"
+    <ImageButton
+        android:id="@+id/orders_button"
+        android:layout_width="55dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="My Account"
-        android:textColor="@color/white"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar5"
-        app:layout_constraintVertical_bias="0.046" />
+        android:layout_gravity="end"
+        android:backgroundTint="@color/Transparency"
+        android:contentDescription="@string/orders"
+        android:src="@drawable/orders_button"
+        app:layout_constraintBottom_toBottomOf="@+id/menu_back"
+        app:layout_constraintEnd_toStartOf="@+id/my_orders_button"
+        app:layout_constraintStart_toEndOf="@+id/home_button"
+        app:layout_constraintTop_toTopOf="@+id/menu_back" />
 
-    <TextView
-        android:id="@+id/username_text"
-        android:layout_width="wrap_content"
+    <ImageButton
+        android:id="@+id/home_button"
+        android:layout_width="55dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="64dp"
-        android:text="Username:"
-        android:textColor="@color/white"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/username_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/account_text"
-        app:layout_constraintVertical_bias="0.514" />
+        android:layout_gravity="end"
+        android:backgroundTint="@color/Transparency"
+        android:contentDescription="@string/home"
+        android:src="@drawable/home_button"
+        app:layout_constraintBottom_toBottomOf="@+id/menu_back"
+        app:layout_constraintEnd_toStartOf="@+id/orders_button"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintTop_toTopOf="@+id/menu_back" />
 
-    <TextView
-        android:id="@+id/email_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Email:"
-        android:textColor="@color/white"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/username_text"
-        app:layout_constraintTop_toBottomOf="@+id/username_content"
-        app:layout_constraintVertical_bias="0.09" />
+</androidx.appcompat.widget.Toolbar>
 
-    <TextView
-        android:id="@+id/password_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Password:"
-        android:textColor="@color/white"
-        android:textSize="25dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/username_text"
-        app:layout_constraintTop_toBottomOf="@+id/email_content"
-        app:layout_constraintVertical_bias="0.123" />
 
-    <TextView
-        android:id="@+id/username_content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:background="#68606060"
-        android:backgroundTint="#68606060"
-        android:text=""
-        android:layout_marginLeft="15dp"
-        android:textColor="@color/white"
-        android:textSize="22sp"
-        app:layout_constraintStart_toStartOf="@+id/username_text"
-        app:layout_constraintTop_toBottomOf="@+id/username_text" />
+<TextView
+    android:id="@+id/account_text"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="8dp"
+    android:text="My Account"
+    android:textColor="@color/white"
+    android:textSize="30sp"
+    android:textStyle="bold"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.50"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/toolbar5"
+    app:layout_constraintVertical_bias="0.046" />
 
-    <TextView
-        android:id="@+id/email_content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:background="#68606060"
-        android:backgroundTint="#68606060"
-        android:text=""
-        android:textColor="@color/white"
-        android:layout_marginLeft="15dp"
-        android:textSize="22sp"
-        app:layout_constraintStart_toStartOf="@+id/email_text"
-        app:layout_constraintTop_toBottomOf="@+id/email_text" />
+<TextView
+    android:id="@+id/password_text"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="64dp"
+    android:text="Password:"
+    android:textColor="@color/white"
+    android:textSize="20sp"
+    android:textStyle="bold"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.498"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintVertical_bias="0.639" />
 
-    <TextView
-        android:id="@+id/password_content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#68606060"
-        android:backgroundTint="#68606060"
-        android:text=""
-        android:textColor="@color/white"
-        android:textSize="22sp"
-        android:layout_marginLeft="15dp"
-        app:layout_constraintStart_toStartOf="@+id/email_text"
-        app:layout_constraintTop_toBottomOf="@+id/password_text" />
+<TextView
+    android:id="@+id/password_content"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="5dp"
+    android:text=""
+    android:textColor="@color/white"
+    android:textSize="18sp"
+    app:layout_constraintBottom_toTopOf="@+id/signOut_button"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.498"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/password_text"
+    app:layout_constraintVertical_bias="0.094" />
 
-    <Button
-        android:id="@+id/signOut_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="64dp"
-        android:backgroundTint="#e7820e"
-        android:text="@string/sign_out"
-        android:textColor="@color/white"
-        android:textSize="17sp"
-        android:padding="15dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+<TextView
+    android:id="@+id/email_text"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="64dp"
+    android:text="Email:"
+    android:textColor="@color/white"
+    android:textSize="20sp"
+    android:textStyle="bold"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintVertical_bias="0.481" />
 
-<!--    <ImageView-->
-<!--        android:id="@+id/imageView2"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:background="@drawable/ic_username_icon"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toStartOf="@+id/username_text"-->
-<!--        app:layout_constraintHorizontal_bias="1.0"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        app:layout_constraintVertical_bias="0.281" />-->
+<TextView
+    android:id="@+id/email_content"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="12dp"
+    android:text=""
+    android:textColor="@color/white"
+    android:textSize="18sp"
+    app:layout_constraintBottom_toTopOf="@+id/password_text"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/email_text"
+    app:layout_constraintVertical_bias="0.0" />
 
-<!--    <ImageView-->
-<!--        android:id="@+id/imageView3"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:background="@drawable/baseline_email_24"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toStartOf="@+id/email_text"-->
-<!--        app:layout_constraintHorizontal_bias="0.906"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/imageView2"-->
-<!--        app:layout_constraintVertical_bias="0.216" />-->
+<TextView
+    android:id="@+id/username_text"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="64dp"
+    android:text="Username:"
+    android:textColor="@color/white"
+    android:textSize="20sp"
+    android:textStyle="bold"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.501"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintVertical_bias="0.337" />
 
-<!--    <ImageView-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginBottom="256dp"-->
-<!--        android:background="@drawable/baseline_password_24"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toStartOf="@+id/password_text"-->
-<!--        app:layout_constraintHorizontal_bias="0.906"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/imageView3"-->
-<!--        app:layout_constraintVertical_bias="0.944" />-->
+<TextView
+    android:id="@+id/username_content"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="5dp"
+    android:text=""
+    android:textColor="@color/white"
+    android:textSize="18sp"
+    app:layout_constraintBottom_toTopOf="@+id/email_text"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.498"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toBottomOf="@+id/username_text"
+    app:layout_constraintVertical_bias="0.111" />
+
+<Button
+    android:id="@+id/signOut_button"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="64dp"
+    android:background="@drawable/navy_rounded_buttons"
+    android:text="@string/sign_out"
+    android:textColor="@color/white"
+    android:textSize="13sp"
+    android:padding="15dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent" />
+
+<Button
+    android:layout_width="300dp"
+    android:layout_height="300dp"
+    android:background="@drawable/navy_translucent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintHorizontal_bias="0.495"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="@+id/toolbar5"
+    app:layout_constraintVertical_bias="0.596" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
