--- a/app/src/main/res/layout/activity_home_customer.xml
+++ b/app/src/main/res/layout/activity_home_customer.xml
@@ -4,7 +4,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-android:background="@drawable/gradient_background"
+android:background="@drawable/new_gradient"
 tools:context=".Home_Customer">
 
 
@@ -28,7 +28,7 @@ tools:context=".Home_Customer">
         android:id="@+id/toolbar5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#e7820e"
+        android:background="@drawable/toolbar"
         android:minHeight="?attr/actionBarSize"
         android:padding="8dp"
         android:theme="?attr/actionBarTheme"
@@ -111,7 +111,6 @@ tools:context=".Home_Customer">
         android:layout_marginTop="93dp"
         android:text="Happy Shopping!"
         android:textColor="@color/white"
-        android:textSize="25sp"
-        android:textStyle="italic"/>
+        android:textSize="18sp" />
 
 </RelativeLayout>
