--- a/app/src/main/res/layout/activity_home_seller.xml
+++ b/app/src/main/res/layout/activity_home_seller.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_background"
+    android:background="@drawable/new_gradient"
     tools:context=".home_seller">
 
     <Button
@@ -13,10 +13,9 @@
         android:layout_height="wrap_content"
         android:text="Add Product"
         android:layout_marginBottom="50dp"
-        android:textStyle="bold"
         android:textColor="@color/white"
         android:padding="15dp"
-        android:backgroundTint="@color/startColor"
+        android:background="@drawable/navy_rounded_buttons"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"/>
 
@@ -40,18 +39,18 @@
         android:id="@+id/hello_there"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
+        android:layout_marginLeft="90dp"
         android:layout_marginTop="93dp"
         android:text="Manage Your Products Here!"
         android:textColor="@color/white"
-        android:textSize="25sp"
-        android:textStyle="bold"/>
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#e7820e"
+        android:background="@drawable/toolbar"
         android:minHeight="?attr/actionBarSize"
         android:padding="8dp"
         android:theme="?attr/actionBarTheme"
