--- a/app/src/main/res/layout/activity_order_change.xml
+++ b/app/src/main/res/layout/activity_order_change.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/gradient_background"
+    android:background="@drawable/new_gradient"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,7 +11,7 @@
         android:layout_height="wrap_content"
         android:text="Order ID:"
         android:textColor="@color/white"
-        android:textSize="30sp"
+        android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +39,7 @@
         android:id="@+id/toolbar5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#e7820e"
+        android:background="@drawable/toolbar"
         android:minHeight="?attr/actionBarSize"
         android:padding="8dp"
         android:theme="?attr/actionBarTheme"
@@ -74,19 +73,6 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/my_orders_button"
             app:layout_constraintTop_toTopOf="@+id/menu_back" />
-
-        <!--        <ImageButton-->
-        <!--            android:id="@+id/cart_button"-->
-        <!--            android:layout_width="55dp"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:layout_gravity="end"-->
-        <!--            android:backgroundTint="@color/Transparency"-->
-        <!--            android:contentDescription="@string/cart"-->
-        <!--            android:src="@drawable/cart_button"-->
-        <!--            app:layout_constraintBottom_toBottomOf="@+id/menu_back"-->
-        <!--            app:layout_constraintEnd_toStartOf="@+id/my_orders_button"-->
-        <!--            app:layout_constraintStart_toEndOf="@+id/home_button"-->
-        <!--            app:layout_constraintTop_toTopOf="@+id/menu_back" />-->
 
         <ImageButton
             android:id="@+id/orders_button"
@@ -135,38 +121,37 @@
     <TextView
         android:id="@+id/status_text"
         android:layout_width="153dp"
-        android:layout_height="43dp"
+        android:layout_height="35dp"
         android:text=""
         android:textColor="@color/white"
-        android:textSize="30sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.062"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.943" />
+        app:layout_constraintVertical_bias="0.864" />
 
     <TextView
         android:layout_width="100dp"
-        android:layout_height="43dp"
+        android:layout_height="35dp"
         android:text="Status:"
-        android:textColor="@color/white"
-        android:textSize="30sp"
+        android:textColor="@color/color1"
+        android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.051"
+        app:layout_constraintHorizontal_bias="0.093"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.859" />
+        app:layout_constraintVertical_bias="0.862" />
 
     <Button
         android:id="@+id/change_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
-        android:background="@color/startColor"
+        android:background="@drawable/navy_rounded_buttons"
         android:textStyle="bold"
         android:padding="10dp"
         android:textColor="@color/white"
