--- a/app/src/main/res/layout/activity_orders_owner.xml
+++ b/app/src/main/res/layout/activity_orders_owner.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/gradient_background"
+    android:background="@drawable/new_gradient"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -22,7 +22,7 @@
         android:id="@+id/toolbar5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#e7820e"
+        android:background="@drawable/toolbar"
         android:minHeight="?attr/actionBarSize"
         android:padding="8dp"
         android:theme="?attr/actionBarTheme"
