--- a/app/src/main/res/layout/card2.xml
+++ b/app/src/main/res/layout/card2.xml
@@ -27,16 +27,17 @@
                     android:layout_marginTop="7dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/endColor"
+                    android:textColor="@color/color1"
                     android:textStyle="bold"
                     android:textSize="20sp" />
 
                 <Button
                     android:id="@+id/go_to_store_button"
                     android:layout_width="wrap_content"
-                    android:layout_height="40dp"
-                    android:layout_marginLeft="260dp"
-                    android:background="@color/endColor"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="220dp"
+                    android:textSize="13dp"
+                    android:background="@drawable/navy_rounded_buttons"
                     android:text="Visit"
                     android:textColor="@color/white" />
 
