--- a/app/src/main/res/layout/orders_customer_card.xml
+++ b/app/src/main/res/layout/orders_customer_card.xml
@@ -13,7 +13,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="12dp"
             app:cardCornerRadius="10dp"
-            app:cardElevation="10dp">
+            app:cardElevation="10dp"
+            >
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -25,7 +26,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="OrderID:"
-                    android:textColor="@color/endColor"
+                    android:textColor="@color/color1"
                     android:textStyle="bold"
                     android:textSize="18sp" />
 
@@ -35,15 +36,15 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:text=""
-                    android:textColor="@color/endColor"
-                    android:textSize="15sp"/>
+                    android:textColor="@color/color2"
+                    android:textSize="13sp"/>
 
                 <Button
                     android:id="@+id/view"
-                    android:layout_width="90dp"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="260dp"
-                    android:backgroundTint="@color/endColor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="220dp"
+                    android:background="@drawable/navy_rounded_buttons"
                     android:text="View"
                     android:textSize="13sp"
                     android:textColor="@color/white" />
