--- a/app/src/main/res/layout/orders_owner_card.xml
+++ b/app/src/main/res/layout/orders_owner_card.xml
@@ -26,7 +26,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="OrderID:"
-                    android:textColor="@color/endColor"
+                    android:textColor="@color/color1"
                     android:textStyle="bold"
                     android:textSize="18sp" />
 
@@ -36,15 +36,15 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:text=""
-                    android:textColor="@color/endColor"
+                    android:textColor="@color/color2"
                     android:textSize="15sp"/>
 
                 <Button
                     android:id="@+id/edit"
-                    android:layout_width="90dp"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="260dp"
-                    android:backgroundTint="@color/endColor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="220dp"
+                    android:background="@drawable/navy_rounded_buttons"
                     android:textColor="@color/white"
                     android:text="Edit"
                     android:textSize="13sp" />
