--- a/app/src/main/res/layout/product_card.xml
+++ b/app/src/main/res/layout/product_card.xml
@@ -13,7 +13,6 @@
             android:layout_height="wrap_content"
             app:cardCornerRadius="10dp"
             app:cardElevation="10dp"
-
             android:layout_margin="12dp">
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -24,28 +23,29 @@
                     android:id="@+id/product_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/endColor"
+                    android:textColor="@color/color2"
                     android:textFontWeight="1000"
-                    android:layout_marginLeft="67dp"
-                    android:textSize="20sp"/>
+                    android:layout_marginLeft="61dp"
+                    android:layout_marginTop="2dp"
+                    android:textSize="16sp"/>
 
                 <TextView
                     android:id="@+id/product_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="33dp"
-                    android:textColor="@color/endColor"
-                    android:layout_marginLeft="60dp"
+                    android:layout_marginTop="36dp"
+                    android:textColor="@color/color2"
+                    android:layout_marginLeft="55dp"
                     android:textFontWeight="1000"
-                    android:textSize="20sp"/>
+                    android:textSize="16sp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Name:"
-                    android:textColor="@color/endColor"
+                    android:textColor="@color/color1"
                     android:textStyle="bold"
-                    android:textSize="20sp"/>
+                    android:textSize="18sp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -53,16 +53,16 @@
                     android:layout_marginTop="33dp"
                     android:text="Price:"
                     android:textStyle="bold"
-                    android:textColor="@color/endColor"
-                    android:textSize="20sp"/>
+                    android:textColor="@color/color1"
+                    android:textSize="18sp"/>
 
                 <Button
                     android:id="@+id/preview_btn"
-                    android:layout_width="90dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="260dp"
+                    android:layout_marginLeft="210dp"
                     android:layout_marginTop="5dp"
-                    android:backgroundTint="@color/endColor"
+                    android:background="@drawable/navy_rounded_buttons"
                     android:textColor="@color/white"
                     android:text="Preview"
                     android:textSize="13sp"/>
